# SentimentAnalyzer

./: README.md
sentiment_analyzer/: README.md  pyproject.toml
sentiment_analyzer/src/sentiment_analyzer/: __init__.py  cli.py  collector.py  models.py  output.py
sentiment_analyzer/src/sentiment_analyzer/scrapers/: __init__.py  base.py  facebook.py  reddit.py  twitter.py
